--- a/apps/02_opengles10_app/CMakeLists.txt
+++ b/apps/02_opengles10_app/CMakeLists.txt
@@ -1,29 +1,15 @@
 cmake_minimum_required(VERSION 2.8)
 
 set(PROJECT_NAME 02_opengles10_app)
-
-set(ANDROID_NATIVE_APP_GLUE_DIR
-    ${ANDROID_NDK}/sources/android/native_app_glue
-    )
-    
-set(ANDROID_OPENCV_DIR
-    ${REPO_HOME}/3rdparty/OpenCV-2.4.4-android-sdk/sdk/native
-    )
+project(${PROJECT_NAME})
 
 include_directories(
-    ${ANDROID_NDK}/platforms/android-14/arch-arm/usr/include
-    ${ANDROID_NATIVE_APP_GLUE_DIR}
-    ${ANDROID_NDK}/toolchains/arm-linux-androideabi-4.7/prebuilt/linux-x86/include
-    ${ANDROID_OPENCV_DIR}/jni/include
-    
-    ${REPO_HOME}/modules/libtools/include
-    ${REPO_HOME}/modules/libglestool/include
+    ${ANAT_INCLUDE}
+    ../../modules/libtools/include
+    ../../modules/libglestool/include
     )
 link_directories(
-    ${ANDROID_NDK}/platforms/android-14/arch-arm/usr/lib
-    ${ANDROID_OPENCV_DIR}/libs/armeabi-v7a
-    ${ANDROID_OPENCV_DIR}/3rdparty/libs/armeabi-v7a
-    ${REPO_HOME}/libs/armeabi-v7a
+    ${ANAT_LINK}
     )
 set(ANDROID_LIBS 
     log 
@@ -45,14 +31,10 @@ set(ANDROID_LIBS
     libtiff
     )
 
-set(SOURCES
-    ${ANDROID_NATIVE_APP_GLUE_DIR}/android_native_app_glue.c
-    src/main.cpp
-    src/OpenGLES10EventHandler.cpp
-    src/OpenGLES10GraphicsService.cpp
-    )
+file(GLOB SRC src/*.cpp)
+set(SOURCES  ${ANAT_NATIVE_APP_GLUE}  ${SRC})
 
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
 target_link_libraries(${PROJECT_NAME} ${ANDROID_LIBS} tools glestools)
 
-install(TARGETS ${PROJECT_NAME} DESTINATION ${REPO_HOME}/android_build/${PROJECT_NAME}/libs/armeabi-v7a)
+install(TARGETS ${PROJECT_NAME} DESTINATION ${ANAT_INSTALL}/${PROJECT_NAME}/libs/armeabi-v7a)
