--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -5,5 +5,12 @@ add_subdirectory(01_empty_application)
 add_subdirectory(02_opengles10_app)
 add_subdirectory(03_opencv_capture_app)
 add_subdirectory(04_opengles20_app)
+add_subdirectory(05_ocv_gles20_app)
 
-add_dependencies(01_empty_application tools)
+# build all apps
+add_custom_target(all_apps)
+add_dependencies(all_apps  01_empty_application)
+add_dependencies(all_apps  02_opengles10_app)
+add_dependencies(all_apps  03_opencv_capture_app)
+add_dependencies(all_apps  04_opengles20_app)
+add_dependencies(all_apps  05_ocv_gles20_app)
