fix cmake build system 2

--- a/apps/01_empty_application/CMakeLists.txt
+++ b/apps/01_empty_application/CMakeLists.txt
@@ -28,4 +28,4 @@ set(ANDROID_LIBS
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
 target_link_libraries(${PROJECT_NAME} ${ANDROID_LIBS} tools)
 
-install(TARGETS ${PROJECT_NAME} DESTINATION ${ANAT_INSTALL}/${PROJECT_NAME}/libs/armeabi-v7a)
+install(TARGETS ${PROJECT_NAME} DESTINATION ${ANAT_INSTALL_APPS}/${PROJECT_NAME}/libs/armeabi-v7a)
