--- a/apps/03_opencv_capture_app/CMakeLists.txt
+++ b/apps/03_opencv_capture_app/CMakeLists.txt
@@ -44,4 +44,4 @@ set(SOURCES  ${ANAT_NATIVE_APP_GLUE}  ${SRC})
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
 target_link_libraries(${PROJECT_NAME} ${ANDROID_LIBS} ${OPENCV_LIBS} tools glestools aruco)
 
-install(TARGETS ${PROJECT_NAME} DESTINATION ${ANAT_INSTALL}/${PROJECT_NAME}/libs/armeabi-v7a)
+install(TARGETS ${PROJECT_NAME} DESTINATION ${ANAT_INSTALL_APPS}/${PROJECT_NAME}/libs/armeabi-v7a)
