new 3rdparty build command deleted OpenCV and glm from 3rdparty dir

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -2,28 +2,24 @@ cmake_minimum_required(VERSION 2.8)
 
 include(../anat_tools.cmake)
 
-add_custom_target(
-	build_opencv
+include(ExternalProject)
 
-	echo "================================" &&
-	echo "unzip OpenCV..."                  &&
-    mkdir -p ${ANAT_INSTALL_3RDPARTY}       &&
-	unzip -n ${CMAKE_CURRENT_LIST_DIR}/OpenCV-2.4.4-android-sdk.zip -d ${ANAT_INSTALL_3RDPARTY} &&
-	echo "done"                             &&
-	echo "================================"
+ExternalProject_Add(
+	external_glm
+	GIT_REPOSITORY  git://github.com/Groovounet/glm.git
+	GIT_TAG         0.9.3.4
+	CMAKE_ARGS      -DCMAKE_INSTALL_PREFIX=${ANAT_INSTALL} -DGLM_TEST_ENABLE=ON
+#	BUILD_COMMAND   ""
+#	INSTALL_COMMAND ""
 	)
-	
-add_custom_target(
-    build_glm
-    
-    echo "================================" &&
-	echo "unzip glm..."                     &&
-	mkdir -p ${ANAT_INSTALL_3RDPARTY}       &&
-    unzip -n ${CMAKE_CURRENT_LIST_DIR}/glm-0.9.4.zip -d ${ANAT_INSTALL_3RDPARTY} &&
-    echo "done"                             &&
-	echo "================================"
-    )
-    
-add_custom_target(all_3rdparty)
-add_dependencies(all_3rdparty build_opencv)
-add_dependencies(all_3rdparty build_glm)
+
+if(ANDROID)
+else(ANDROID)
+	ExternalProject_Add(
+		external_OpenCV
+		GIT_REPOSITORY git://github.com/Itseez/opencv.git
+		GIT_TAG        2.4.5
+		CMAKE_ARGS     -DCMAKE_INSTALL_PREFIX=${ANAT_INSTALL}
+		)
+endif(ANDROID)
+
