added ois to 3rdparty for Linux chainge in ogre_test_001

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -3,23 +3,23 @@ cmake_minimum_required(VERSION 2.8)
 include(ExternalProject)
 
 ExternalProject_Add(
-	external_glm
+    external_glm
     URL             ${CMAKE_CURRENT_LIST_DIR}/glm-0.9.3.4.tar.gz
-	CMAKE_ARGS      -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/3rdparty -DGLM_TEST_ENABLE=ON
+    CMAKE_ARGS      -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/3rdparty -DGLM_TEST_ENABLE=ON
 	)
 
 if(ANDROID)
-	ExternalProject_Add(
-		external_OpenCV
+    ExternalProject_Add(
+        external_OpenCV
         URL            ${CMAKE_CURRENT_LIST_DIR}/opencv-2.4.5.tar.gz
-		CMAKE_ARGS     -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/3rdparty -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
+        CMAKE_ARGS     -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/3rdparty -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
 		)
 else(ANDROID)
-	ExternalProject_Add(
-		external_OpenCV
+    ExternalProject_Add(
+        external_OpenCV
         URL            ${CMAKE_CURRENT_LIST_DIR}/opencv-2.4.5.tar.gz
-		CMAKE_ARGS     -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/3rdparty
-		)
+        CMAKE_ARGS     -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/3rdparty
+        )
 
     # prerequisites
     # Compiler And Configuration Tools:    sudo apt-get install build-essential automake libtool
@@ -30,6 +30,14 @@ else(ANDROID)
         external_OGRE
         URL ${CMAKE_CURRENT_LIST_DIR}/ogre_src_v1-8-1.tar.bz2
         CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}/3rdparty
+        )
+
+    set(EXTERNAL_PROJECT_OIS external_OIS)
+    ExternalProject_Add(
+        external_OIS
+        URL ${CMAKE_CURRENT_LIST_DIR}/ois_v1-3.tar.gz
+        BINARY_DIR ${CMAKE_BINARY_DIR}/3rdparty/${EXTERNAL_PROJECT_OIS}-prefix/src/${EXTERNAL_PROJECT_OIS}
+        CONFIGURE_COMMAND sh ${CMAKE_BINARY_DIR}/3rdparty/${EXTERNAL_PROJECT_OIS}-prefix/src/${EXTERNAL_PROJECT_OIS}/bootstrap && ${CMAKE_BINARY_DIR}/3rdparty/${EXTERNAL_PROJECT_OIS}-prefix/src/${EXTERNAL_PROJECT_OIS}/configure --prefix=${CMAKE_INSTALL_PREFIX}/3rdparty
         )
 endif(ANDROID)
 
