--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -9,4 +9,6 @@ if(ANDROID)
 	#add_subdirectory(05_ocv_gles20_app)
 else(ANDROID)
 	add_subdirectory(ogre_test_001)
+    add_dependencies(ogre_test_001 external_OGRE)
+    add_dependencies(ogre_test_001 external_OIS)
 endif(ANDROID)
