--- a/apps/ogre_test_001/CMakeLists.txt
+++ b/apps/ogre_test_001/CMakeLists.txt
@@ -3,9 +3,16 @@ cmake_minimum_required(VERSION 2.8)
 set(PROJECT_NAME ogre_test_001)
 project(${PROJECT_NAME})
 
-include_directories(${CMAKE_INSTALL_PREFIX}/3rdparty/include)
+include_directories(
+    ${CMAKE_INSTALL_PREFIX}/3rdparty/include
+    )
+link_directories(
+    ${CMAKE_INSTALL_PREFIX}/3rdparty/lib
+    )
 
-set(SOURCES src/main.cpp)
+set(SOURCES 
+    src/main.cpp
+    )
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 
