android app not builded now

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -2,11 +2,11 @@ cmake_minimum_required(VERSION 2.8)
 
 # apps
 if(ANDROID)
-	add_subdirectory(01_empty_application)
-	add_subdirectory(02_opengles10_app)
-	add_subdirectory(03_opencv_capture_app)
-	add_subdirectory(04_opengles20_app)
-	add_subdirectory(05_ocv_gles20_app)
+	#add_subdirectory(01_empty_application)
+	#add_subdirectory(02_opengles10_app)
+	#add_subdirectory(03_opencv_capture_app)
+	#add_subdirectory(04_opengles20_app)
+	#add_subdirectory(05_ocv_gles20_app)
 
 else(ANDROID)
 	add_subdirectory(ogre_test_001)
