fix modules for android and linux

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -1,8 +1,13 @@
 cmake_minimum_required(VERSION 2.8)
 
-#add_subdirectory(libtools)
-#add_subdirectory(libglestool)
-add_subdirectory(libaruco)
 
-add_dependencies(aruco external_OpenCV)
+if(ANDROID)
+    #add_subdirectory(libglestool)
+else(ANDROID)
+    #add_subdirectory(libtools)
+    add_subdirectory(libaruco)
+    add_dependencies(aruco external_OpenCV)
+endif(ANDROID)
+
+
 
