--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -14,6 +14,8 @@ if(ANDROID)
 	#add_subdirectory(03_opencv_capture_app)
 	#add_subdirectory(04_opengles20_app)
 	add_subdirectory(05_ocv_gles20_app)
+	
+	add_subdirectory(android_openmax_test)
 
 else(ANDROID)
 	add_subdirectory(ogre_test_001)
