--- a/modules/libcamera/CMakeLists.txt
+++ b/modules/libcamera/CMakeLists.txt
@@ -3,17 +3,15 @@ cmake_minimum_required(VERSION 2.8)
 set(PROJECT_NAME camera)
 project(${PROJECT_NAME})
 
+include_directories(
+    include
+    )
+
 set(SOURCES 
-	src/capture.c
-	src/capture.h
-	src/util.c
-	src/util.h
-	src/video_device.c
-	src/video_device.h
-	#src/webcam.c
-	#src/webcam.h
-	src/yuv.c
-	src/yuv.h
+	src/capture.cpp
+	src/util.cpp
+	src/video_device.cpp
+	src/yuv.cpp
 	)
 	
 link_directories(
