new files in libcamera

--- a/modules/libcamera/CMakeLists.txt
+++ b/modules/libcamera/CMakeLists.txt
@@ -8,10 +8,7 @@ include_directories(
     )
 
 set(SOURCES 
-	src/capture.cpp
-	src/util.cpp
-	src/video_device.cpp
-	src/yuv.cpp
+	src/camera.cpp
 	)
 	
 link_directories(
