--- a/apps/application_test/CMakeLists.txt
+++ b/apps/application_test/CMakeLists.txt
@@ -3,6 +3,10 @@ cmake_minimum_required(VERSION 2.8)
 set(PROJECT_NAME application_test)
 project(${PROJECT_NAME})
 
+include_directories(
+    ../../modules/libapplication_template/include
+    )
+
 set(SOURCES
     src/main.cpp
     src/TestApplication.cpp
@@ -12,5 +16,6 @@ set(SOURCES
 add_executable(${PROJECT_NAME} ${SOURCES})
 
 set(LIBS
-    application)
+    application_template
+    )
 target_link_libraries(${PROJECT_NAME} ${LIBS})
