many models in ogre_aruco added some new models new directories for models

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 2.8)
 
 set(INSTALL_3RDPARTY ${CMAKE_BINARY_DIR}/INSTALL_3RDPARTY)
 
+# data
+add_subdirectory(data)
+
 # 3rdparty
 add_subdirectory(3rdparty)
 
