--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -20,6 +20,8 @@ if(ANDROID)
 	add_subdirectory(camera_test)
 
 else(ANDROID)
+    add_subdirectory(3ds2ogre)
+
 	add_subdirectory(ogre_test_001)
 	add_dependencies(ogre_test_001 external_OGRE)
 	add_dependencies(ogre_test_001 external_OIS)
